upstream skourismanolis fix for "Fix active tab stripe overlap with bottom border. Whenever a tab is active, the stripe gradient overlaps with the bottom border. Adding a z-index to the stripe fixes that."

--- a/synthwave87.css
+++ b/synthwave87.css
@@ -65,6 +65,7 @@
   height: 4px;
   background: linear-gradient(to right, #fc28a8, #03edf9) !important;
   opacity: 1;
+  z-index: 6;
 }
 
 .monaco-workbench .part.editor>.content .editor-group-container>.title .tabs-container>.tab.sizing-fit::after {
